unpackaged/main/default/objects/Partner_Update_Created__e/Partner_Update_Created__e.object-meta.xml
<CustomObject>
    <label>Partner Update Created</label>
    <pluralLabel>Partner Update Created</pluralLabel>
</CustomObject>