unpackaged/main/default/objects/Partner_Update_Created__e/fields/Matter_Id__c.field-meta.xml
<CustomField>
    <fullName>Matter_Id__c</fullName>
    <label>Matter Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>