unpackaged/main/default/objects/Partner_Update_Created__e/fields/Partner_Update_Id__c.field-meta.xml
<CustomField>
    <fullName>Partner_Update_Id__c</fullName>
    <label>Partner Update Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>